--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -9,4 +9,11 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.stap1 .container {
+    margin-bottom: 20px;
 }
