--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -94,3 +94,32 @@ li {
     color: white;
     text-decoration: none;
 }
+
+.popup {
+    display: none;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(128, 128, 128, 0.568);
+}
+.popup_content {
+    padding: 15px;
+    min-width: 400px;
+    min-height: 400px;
+    top: 50%;
+    left: 50%;
+    border-radius: 8px;
+    position: fixed;
+    transform: translate(-50%, -50%);
+    background-color: white;
+}
+
+.closepopup {
+    position: absolute;
+    top: 3%;
+    right: 3%;
+    color: red;
+    font-size: 3vh;
+    padding: 10px;
+    cursor: pointer;
+}
